# petitml

./: README.md  dune-project  petitml.opam
example/: exp_abstract.timl  exp_apply.timl  exp_bind.timl  exp_scope.ml  if.timl
src/: ast.ml  dune  env.ml  lexer.ml  menhir_parser.mly  parse.ml  petitml.ml  pp.ml  scope_analysis.ml  usage_analysis.ml
