(library
  (public_name petitml)
  (modules ast lexer menhir_parser parse pp )
  (libraries menhirLib sedlex )
  (preprocess
    (pps sedlex.ppx))
  (instrumentation
    (backend bisect_ppx)))

(executable
  (public_name petitml)
  (modules petitml)
  (libraries sedlex petitml))

(menhir
  (modules menhir_parser))
